# tokio-fsm

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  REVIEW.md  justfile
.agents/skills/rust-code-reviewer/: SKILL.md
.github/: dependabot.yml
.github/workflows/: cargo-assist.yml  ci.yml  release.yml
benches/: comparison.rs
examples/: comparison.rs  worker.rs
examples/axum_fsm/: Cargo.toml  README.md
examples/axum_fsm/src/: main.rs
examples/validation_comparison/: Cargo.toml  README.md
src/: core.rs  lib.rs
tests/: test_fsm_integration.rs  test_lifecycle.rs  test_result_and_timeout.rs
tokio-fsm-macros/: CODEGEN.md  Cargo.toml
tokio-fsm-macros/src/: attrs.rs  codegen.rs  lib.rs  validation.rs
tokio-fsm-macros/src/codegen/: enums.rs  impls.rs  structs.rs
tokio-fsm-macros/src/codegen/impls/: handle.rs  helpers.rs  mod.rs  run.rs  spawn.rs  task.rs
tokio-fsm-macros/src/validation/: graph.rs  mod.rs  parser.rs  types.rs
tokio-fsm-macros/tests/ui/: duplicate_source_state.rs  duplicate_source_state.stderr  invalid_return_type.rs  invalid_return_type.stderr  mixed_events.rs  mixed_events.stderr  mixed_on_and_on_timeout.rs  mixed_on_and_on_timeout.stderr  multiple_on_timeout.rs  multiple_on_timeout.stderr  payload_mismatch.rs  payload_mismatch.stderr  serde_feature_required.rs  serde_feature_required.stderr  timeout_without_handler.rs  timeout_without_handler.stderr  unreachable_timeout.rs  unreachable_timeout.stderr
