[workspace]
members = [".", "tokio-fsm-macros"]
exclude = ["examples/axum_fsm", "examples/validation_comparison"]
resolver = "2"

[workspace.package]
version = "0.4.0"
edition = "2024"
rust-version = "1.92"
license = "MIT"
authors = ["Abhishek Shree <abhishek.shree@outlook.com>"]
repository = "https://github.com/abhishekshree/tokio-fsm"
documentation = "https://docs.rs/tokio-fsm"
readme = "README.md"

[workspace.dependencies]
tokio-fsm-macros = { version = "0.4.0", path = "tokio-fsm-macros" }

tokio = { version = "1.50", features = ["sync", "rt", "time", "macros"] }
tokio-util = { version = "0.7", features = ["rt"] }
tracing = "0.1"
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"

[package]
name = "tokio-fsm"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true

description = "Compile-time generated Tokio async finite state machines with explicit Rust behavior"
keywords = ["tokio", "async", "fsm", "state-machine", "proc-macro"]
categories = [
    "asynchronous",
    "concurrency",
    "development-tools::procedural-macro-helpers",
]

[dependencies]
tokio-fsm-macros = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true, optional = true }
serde = { workspace = true, optional = true }
thiserror = { workspace = true }

[features]
default = []
tracing = ["dep:tracing"]
serde = ["dep:serde"]

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }
criterion = { version = "0.8", features = ["async_tokio"] }

[[bench]]
name = "comparison"
harness = false

[workspace.metadata.release]
# versioning
shared-version = true
dependent-version = "upgrade"

# git behavior
push = true
sign-commit = false
tag-name = "v{{version}}"
tag-message = "Release {{version}}"
pre-release-commit-message = "chore: release v{{version}}"
push-remote = "origin"

# publishing
publish = true

[workspace.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
