[package]
name = "axum_fsm"
version = "0.1.0"
edition = "2024"
publish = false

[workspace]

[dependencies]
tokio-fsm = { version = "0.2.2", path = "../../", features = [
    "serde",
    "tracing",
] }
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
console-subscriber = "0.4"
tower = "0.4"
