[package]
name = "axum_fsm"
version = "0.3.1"
edition = "2024"
publish = false


[dependencies]
tokio-fsm = { version = "0.3.1", path = "../../", features = [
    "serde",
    "tracing",
] }
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
console-subscriber = "0.4"
tower = "0.4"
